
2007-01-29 Lynn Garren

	* fix everything so doxygen will create a useful reference manual
	  nearly every file has been touched, but only the comments changed


2007-01-25 Lynn Garren

	* example/example_MyPythiaRead.cc: read in the events you just wrote
	* example/*.cc: put all uses of IO_Ascii within an explicit scope

	* configure.in, doc/Makefile.am: if latex is found, get the path

	* test/testHepMC.sh.in: make the diff work for MacOSX

	--------------------  HepMC-02-00-01  ---------------------------------

2007-01-17 Lynn Garren

	* test/testSimpleVector.cc: exercise the vector methods

2007-01-16 Lynn Garren

	* HepMC/SimpleVector.icc: implement ThreeVector::set(x,y,z)

2006-08-23 Lynn Garren

	* install examples in $(prefix)/examples/HepMC
	
	* check for latex and build documents if latex is present

	--------------------  HepMC-02-00-00  ---------------------------------

2006-08-22 Lynn Garren

	* src/IO_ExtendedAscii.cc: read and write generated mass as part of 
	  particle line.

2006-08-18 Lynn Garren

	* doc/HepMC2_user_manual.tex documentation for HepMC 2

2006-08-01 Lynn Garren

	* HepMC/is_arithmetic.h, HepMC/enable_if.h supplied by Walter Brown 
	  for a clean template constructor implementation.

2006-07-23 Lynn Garren

	* HepMC/SimpleVector.h: add a templated constructor for both FourVector
          and ThreeVector that will take any lorentz vector which has the 
          x(), y(), z(), and t() methods.  This should enable existing code 
          that uses CLHEP Vector classes to keep working.

2006-07-19 Lynn Garren

	* replace CLHEP/Vector/LorentzVector.h and CLHEP/Vector/ThreeVector.h  
	  with HepMC/SimpleVector.h
	  implement some of the basic vector properties so user code won't break


	--------------------  HepMC-01-28-00  ---------------------------------

2006-08-08 Lynn Garren

	* HepMC/IO_ExtendedAscii.h: Extended format writes PdfInfo and HeavyIon
	  if they are present in the event.  This is otherwise identical 